src/main/default/objects/Quiz_Question__c/Quiz_Question__c.object-meta.xml
<CustomObject>
    <label>Quiz Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>