src/main/default/objects/Quiz_Question__c/fields/Answer_B__c.field-meta.xml
<CustomField>
    <fullName>Answer_B__c</fullName>
    <label>Answer B</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>