src/main/default/objects/Quiz_Question__c/fields/Answer_C__c.field-meta.xml
<CustomField>
    <fullName>Answer_C__c</fullName>
    <label>Answer C</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>