src/main/default/objects/Quiz_Question__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <label>Correct Answer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quiz_Answer</valueSetName>
    </valueSet>
</CustomField>