src/main/default/objects/Quiz_Question__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>