src/main/default/objects/Quiz_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>